force-app/main/default/objects/Account_Exception__c/Account_Exception__c.object-meta.xml
<CustomObject>
    <label>Customer Exception</label>
    <nameField>
        <displayFormat>AE -{000}</displayFormat>
        <label>Exception #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>