force-app/main/default/objects/Account_Exception__c/fields/Additional_Supporting_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Supporting_Information__c</fullName>
    <label>Additional Supporting Information</label>
    <type>TextArea</type>
</CustomField>