force-app/main/default/objects/Account_Exception__c/fields/Any_Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Any_Current_Contract__c</fullName>
    <inlineHelpText>Is there a current contract in place for services, solutions, SaaS?</inlineHelpText>
    <label>Any Current Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>