force-app/main/default/objects/Account_Exception__c/fields/Channel_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>Channel_Sales_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Sales Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>