force-app/main/default/objects/Account_Exception__c/fields/Channel_Sales_Leader_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Sales_Leader_Name__c</fullName>
    <formula>Channel_Sales_Leader__r.FirstName + &apos; &apos; + Channel_Sales_Leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Sales Leader</label>
    <type>Text</type>
</CustomField>