force-app/main/default/objects/Account_Exception__c/fields/Current_Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_Business_Relationship__c</fullName>
    <inlineHelpText>Please describe the current business relationship between your company and End Customer entered above (NCR Named Account)?</inlineHelpText>
    <label>Current Business Relationship</label>
    <type>TextArea</type>
</CustomField>