force-app/main/default/objects/Account_Exception__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Exception_Account__c</referenceTo>
    <relationshipName>Account_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>