force-app/main/default/objects/Account_Exception__c/fields/Date_Of_Signing__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Signing__c</fullName>
    <inlineHelpText>Mandatory if &quot;Any Current Contract&quot; is Yes</inlineHelpText>
    <label>Signing Date(Mandatory if above:Yes)</label>
    <type>Date</type>
</CustomField>