force-app/main/default/objects/Account_Exception__c/fields/Direct_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Sales Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Exceptions2</relationshipName>
    <type>Lookup</type>
</CustomField>