force-app/main/default/objects/Account_Exception__c/fields/End_Customer_MCN__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_MCN__c</fullName>
    <formula>Customer_Name__r.Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer MCN</label>
    <type>Text</type>
</CustomField>