force-app/main/default/objects/Account_Exception__c/fields/End_Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Region__c</fullName>
    <formula>Customer_Name__r.LOB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Region</label>
    <type>Text</type>
</CustomField>