force-app/main/default/objects/Account_Exception__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <label>Expected Close Date/Expected Book Date</label>
    <type>Date</type>
</CustomField>