force-app/main/default/objects/Account_Exception__c/fields/GDPR_Compliance_Policy__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliance_Policy__c</fullName>
    <defaultValue>&quot;www.ncr.com/privacy&quot;</defaultValue>
    <label>Our privacy policy is available at</label>
    <type>Url</type>
</CustomField>