force-app/main/default/objects/Account_Exception__c/fields/How_long_has_this_existed__c.field-meta.xml
<CustomField>
    <fullName>How_long_has_this_existed__c</fullName>
    <label>How long has this existed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>