force-app/main/default/objects/Account_Exception__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <formula>Customer_Name__r.Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCN</label>
    <type>Text</type>
</CustomField>