force-app/main/default/objects/Account_Exception__c/fields/Name_the_Products_Provided__c.field-meta.xml
<CustomField>
    <fullName>Name_the_Products_Provided__c</fullName>
    <inlineHelpText>What are the products, solutions or services already provided by your company to this account or subsidiary?</inlineHelpText>
    <label>Name the Products Provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>