force-app/main/default/objects/Account_Exception__c/fields/Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>