force-app/main/default/objects/Account_Exception__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>