force-app/main/default/objects/Account_Exception__c/fields/Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Zip_Code__c</fullName>
    <label>Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>