force-app/main/default/objects/Account_Exception__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>