force-app/main/default/objects/Account_Exception__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <label>End Customer Primary Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>