force-app/main/default/objects/Account_Exception__c/fields/Primary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solution__c</fullName>
    <label>Primary Solution/Offer Portfolio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>