force-app/main/default/objects/Account_Exception__c/fields/Secondary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Competitor__c</fullName>
    <label>Secondary Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>