force-app/main/default/objects/Account_Exception__c/fields/Secondary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Solution__c</fullName>
    <label>Secondary Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>