force-app/main/default/objects/Account_Exception__c/fields/State_Province_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Region__c</fullName>
    <label>State/Province/Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>