force-app/main/default/objects/Account_Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted to Channel Sales Leader</fullName>
            </value>
            <value>
                <fullName>Submitted to Channel Account Manager</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Review</fullName>
                <isActive>false</isActive>
                <label>Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>