force-app/main/default/objects/Account_Exception__c/fields/Submission_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Approval_Date__c</fullName>
    <label>Submission Approval DateTime</label>
    <type>DateTime</type>
</CustomField>