force-app/main/default/objects/Account_Exception__c/fields/What_are_your_own_value_added_products__c.field-meta.xml
<CustomField>
    <fullName>What_are_your_own_value_added_products__c</fullName>
    <inlineHelpText>What are your own value added products, solutions or services already provided by your company to this account or subsidiary?</inlineHelpText>
    <label>What are your own value added products?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>