force-app/main/default/objects/Account_Exception__c/fields/Who_are_the_key_contacts__c.field-meta.xml
<CustomField>
    <fullName>Who_are_the_key_contacts__c</fullName>
    <inlineHelpText>Who are the key contacts within the account you have a pre-existing relationship?</inlineHelpText>
    <label>Who are the key contacts?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>